--- a/app/package.json
+++ b/app/package.json
@@ -6,14 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "build:sodium-native": "cd submodules/sodium-native && npm run fetch-libsodium && npm run dev",
+    "build:sodium-native:dev": "cd submodules/sodium-native && npm run dev",
+    "postinstall": "npm run build:sodium-native"
   },
   "author": "Ricardo Seromenho",
   "license": "ISC",
   "dependencies": {
-    "algosdk": "1.18.1"
+    "algosdk": "1.18.1",
+    "sodium-native": "file:./submodules/sodium-native"
   },
   "devDependencies": {
+    "@types/sodium-native": "2.3.5",
     "nodemon": "2.0.19",
     "ts-node": "10.8.2",
     "typescript": "4.7.4"
