--- a/app/package.json
+++ b/app/package.json
@@ -4,22 +4,36 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "build:sodium-native": "cd ../submodules/sodium-native && npm i && npm run fetch-libsodium && npm run dev",
+    "build:sodium-native:dev": "cd ../submodules/sodium-native && npm run dev",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon",
     "start": "node dist/index.js",
-    "build:sodium-native": "cd submodules/sodium-native && npm run fetch-libsodium && npm run dev",
-    "build:sodium-native:dev": "cd submodules/sodium-native && npm run dev",
-    "postinstall": "npm run build:sodium-native"
+    "preinstall": "npm run build:sodium-native"
   },
   "author": "Ricardo Seromenho",
   "license": "ISC",
   "dependencies": {
     "algosdk": "1.18.1",
-    "sodium-native": "file:./submodules/sodium-native"
+    "sodium-native": "file:../submodules/sodium-native"
   },
   "devDependencies": {
+    "@appliedblockchain/eslint-config": "3.0.0",
+    "@appliedblockchain/prettier-config": "0.0.2",
+    "@types/jest": "28.1.6",
+    "@types/node": "18.0.6",
     "@types/sodium-native": "2.3.5",
+    "@typescript-eslint/eslint-plugin": "5.30.6",
+    "@typescript-eslint/parser": "5.30.6",
+    "eslint": "8.20.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-jest": "26.6.0",
+    "jest": "28.1.3",
     "nodemon": "2.0.19",
+    "prettier": "2.7.1",
+    "ts-jest": "28.0.7",
     "ts-node": "10.8.2",
     "typescript": "4.7.4"
   }
