--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "algosdk": "1.18.1",
+    "dotenv": "16.0.1",
     "sodium-native": "file:../submodules/sodium-native"
   },
   "devDependencies": {
