--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,7 @@
     "build:sodium-native": "cd ../submodules/sodium-native && npm i && npm run fetch-libsodium && npm run dev",
     "build:sodium-native:dev": "cd ../submodules/sodium-native && npm run dev",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start:dev": "nodemon",
     "start": "node dist/index.js",
     "preinstall": "npm run build:sodium-native"
@@ -32,6 +32,7 @@
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-jest": "26.6.0",
     "jest": "28.1.3",
+    "jest-junit": "14.0.0",
     "nodemon": "2.0.19",
     "prettier": "2.7.1",
     "ts-jest": "28.0.7",
