--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nodejs",
-  "version": "1.0.0",
+  "name": "vrf-oracle",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
