--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "algosdk": "1.18.1",
     "dotenv": "16.0.1",
-    "sodium-native": "file:../submodules/sodium-native"
+    "sodium-native": "file:../submodules/sodium-native",
+    "winston": "3.8.1"
   },
   "devDependencies": {
     "@appliedblockchain/eslint-config": "3.0.0",
