--- a/services/vrf/Dockerfile.dev
+++ b/services/vrf/Dockerfile.dev
@@ -1,9 +1,7 @@
-# node:16.16.0-alpine3.16
-FROM node@sha256:9a2db0008b592cfde1b98aa8972a8051ccb80bb51dde8b06c3a2e3762794e89c
-
-COPY ./ ./vrf
-
-WORKDIR /vrf
+# node:16.16.0
+FROM node@sha256:8cb8d1582f235b30eea033baddde78b17143348fb392154d4c67a3c08307a8f2
+WORKDIR /usr/src/app
+COPY . /usr/src/app
 RUN npm install
 
 CMD [ "npm", "run", "start:dev" ]
