--- a/services/app/Dockerfile.dev
+++ b/services/app/Dockerfile.dev
@@ -1,9 +1,7 @@
 # node:16.16.0-alpine3.16
 FROM node@sha256:9a2db0008b592cfde1b98aa8972a8051ccb80bb51dde8b06c3a2e3762794e89c
-
-COPY ./ ./app
-
-WORKDIR /app
+WORKDIR /usr/src/app
+COPY . /usr/src/app
 RUN npm install
 
 CMD [ "npm", "run", "start:dev" ]
