--- a/services/vrf/package.json
+++ b/services/vrf/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@appliedblockchain/sodium-native-vrf": "3.3.2",
+    "@aws-sdk/client-kms": "3.137.0",
     "dotenv": "16.0.1",
     "winston": "3.8.1"
   },
