--- a/services/vrf/.env.example
+++ b/services/vrf/.env.example
@@ -1,8 +1,9 @@
 NODE_ENV=development
 LOG_LEVEL="debug"
 
-AWS_REGION=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_REGION=eu-west-2
+AWS_ACCESS_KEY_ID=vrf
+AWS_SECRET_ACCESS_KEY=vrf
+AWS_KMS_KEY_ID=
 
-VRF_SECRET_KEY=
+VRF_ENCRYPTED_SECRET_KEY=
