add gRPC server on VRF service

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -22,8 +22,12 @@ services:
     build:
       context: ./services/vrf
       dockerfile: ./Dockerfile.dev
+    depends_on:
+      - localstack
     env_file:
       - ./services/vrf/.env
+    ports:
+      - "50051:50051"
     volumes:
       - ./services/vrf:/usr/src/app
       - /usr/src/app/node_modules
