--- a/services/app/package.json
+++ b/services/app/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "build:proto": "proto-loader-gen-types --longs=String --enums=String --defaults --oneofs --grpcLib=@grpc/grpc-js --outDir=src/proto/ src/proto/*.proto",
     "lint": "eslint .",
     "test": "jest",
     "start:dev": "nodemon",
@@ -13,6 +14,8 @@
   "author": "Ricardo Seromenho",
   "license": "ISC",
   "dependencies": {
+    "@grpc/grpc-js": "1.6.8",
+    "@grpc/proto-loader": "0.7.0",
     "algosdk": "1.18.1",
     "dotenv": "16.0.1",
     "winston": "3.8.1"
