--- a/services/app/Dockerfile.dev
+++ b/services/app/Dockerfile.dev
@@ -2,6 +2,6 @@
 FROM node@sha256:9a2db0008b592cfde1b98aa8972a8051ccb80bb51dde8b06c3a2e3762794e89c
 WORKDIR /usr/src/app
 COPY . /usr/src/app
-RUN npm install
+RUN npm install && ./build-proto.sh
 
 CMD [ "npm", "run", "start:dev" ]
