--- a/services/app/package.json
+++ b/services/app/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@grpc/grpc-js": "1.6.8",
     "@grpc/proto-loader": "0.7.0",
+    "@sentry/node": "7.8.1",
     "algosdk": "1.18.1",
     "dotenv": "16.0.1",
     "winston": "3.8.1"
