--- a/services/vrf/package.json
+++ b/services/vrf/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/client-kms": "3.137.0",
     "@grpc/grpc-js": "1.6.8",
     "@grpc/proto-loader": "0.7.0",
+    "@sentry/node": "7.8.1",
     "dotenv": "16.0.1",
     "winston": "3.8.1"
   },
