--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,10 +16,10 @@ services:
       - ALGOD_SERVER=${ALGOD_SERVER}
       - ALGOD_PORT=${ALGOD_PORT}
       - APP_ID=${APP_ID}
-      - APP_CREATOR_KEY=${APP_CREATOR_KEY}
-      - SERVICE_KEY=${SERVICE_KEY}
+      - SERVICE_MEMONIC=${SERVICE_MEMONIC}
       - STARTING_ROUND=${STARTING_ROUND}
       - VRF_GRPC_HOST=${VRF_GRPC_HOST}
+      - SENTRY_DSN=${SENTRY_DSN}
 
   vrf:
     hostname: algorand-randomness-beacon-vrf
@@ -37,6 +37,7 @@ services:
       - VRF_ENCRYPTED_KEY=${VRF_ENCRYPTED_KEY}
       - GRPC_ADDRESS=${GRPC_ADDRESS}
       - GRPC_PORT=${GRPC_PORT}
+      - SENTRY_DSN=${SENTRY_DSN}
 
     ports:
       - "50051:50051"
