--- a/services/app/.env.example
+++ b/services/app/.env.example
@@ -6,13 +6,10 @@ ALGOD_SERVER=http://127.0.0.1
 ALGOD_PORT=4001
 
 APP_ID=
-APP_CREATOR_KEY=
-SERVICE_KEY=
-SIGNING_KEY=
 STARTING_ROUND=
 
 VRF_GRPC_HOST=dns:0.0.0.0:50051
 
 SENTRY_DSN=
-SERVICE_PRIVATE_KEY=
-SERVICE_ADDRESS=
+
+SERVICE_MEMONIC=
