--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
       - run:
           name: Run docker build
           command: |-
-            docker-compose -f docker-compose.yml build --exit-code-from build
+            docker-compose -f docker-compose.yml build
 
 workflows:
   test-services:
