--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,8 @@ jobs:
           NODE_ENV: test
     steps:
       - checkout
+      - setup_remote_docker:
+          version: 20.10.2
       - restore_cache:
           keys:
             - app-{{ checksum "services/app/package.json" }}
