--- a/stack-eks/vrf/dev/vrf.deployment.yaml
+++ b/stack-eks/vrf/dev/vrf.deployment.yaml
@@ -23,26 +23,44 @@ spec:
           image: appliedblockchain/algorand-randomness-beacon-vrf:latest
           imagePullPolicy: Always
           env:
+          - name: SERVICE
+            value: "vrf"
           - name: NODE_ENV
-            value: ""
+            value: "development"
           - name: LOG_LEVEL
-            value: ""
+            value: "debug"
           - name: AWS_REGION
-            value: ""
+            value: "eu-west-1"
           - name: AWS_ACCESS_KEY_ID
-            value: ""
+            value: "AKIAVQ5QOOOM7F2MUCA2"
           - name: AWS_SECRET_ACCESS_KEY
             valueFrom:
               secretKeyRef:
                 name: app-env-vars
                 key: AWS_SECRET_ACCESS_KEY
-          - name: VRF_SECRET_KEY
+          - name: AWS_KMS_KEY_ID
+            value: "mrk-16204a3cd38f4c1c8c0a523b9ba10bf2"
+          - name: VRF_ENCRYPTED_KEY
             valueFrom:
               secretKeyRef:
                 name: app-env-vars
-                key: VRF_SECRET_KEY
-          - name: "SENTRY_DSN"
+                key: VRF_ENCRYPTED_KEY
+          - name: GRPC_ADDRESS
+            value: "0.0.0.0"
+          - name: GRPC_PORT
+            value: "50051"
+          - name: SENTRY_DSN
             value: "https://0cdc8ad8aea54dbbbad3dd3b7bec531f@o1305787.ingest.sentry.io/6622570"
+          - name: DD_ENV
+            value: "local"
+          - name: DD_VERSION
+            value: "0.0.1"
+          - name: DD_AGENT_HOST
+            value: "datadog-agent.kube-system.svc"
+          - name: DD_TRACE_AGENT_PORT
+            value: "8126"
+          - name: DD_LOGS_INJECTION
+            value: "true"
           ports:
             - name: http
               containerPort: 50051
