--- a/services/app/package.json
+++ b/services/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vrf-oracle",
+  "name": "randomness-beacon-app",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -18,6 +18,7 @@
     "@grpc/proto-loader": "0.7.0",
     "@sentry/node": "7.8.1",
     "algosdk": "1.18.1",
+    "dd-trace": "2.12.2",
     "dotenv": "16.0.1",
     "winston": "3.8.1"
   },
