--- a/stack-eks/vrf/dev/vrf.daemonset.yaml
+++ b/stack-eks/vrf/dev/vrf.daemonset.yaml
@@ -9,6 +9,10 @@ spec:
   selector:
     matchLabels:
       app: vrf
+  updateStrategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
   template:
     metadata:
       labels:
