add an alert for insufficient funds on the service account

--- a/services/app/.env.test
+++ b/services/app/.env.test
@@ -13,6 +13,8 @@ VRF_GRPC_HOST=dns:0.0.0.0:50051
 SENTRY_DSN=
 
 SERVICE_MNEMONIC=
+# Around 3 months of funds
+SERVICE_ACCOUNT_MINIMUM_BALANCE=200000000
 
 # 1000 -8
 MOST_DISTANT_ROUNDS_ALLOWED=992
