--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,25 +4,27 @@ version: 2.1
 commands:
   build-app:
     steps:
-      - setup_remote_docker:
-          docker_layer_caching: true
       - run:
           name: build images
-          command: docker-compose -f docker-compose.yml build app
+          command: docker-compose -f docker-compose.yml build
       - run:
           name: Login to Dockerhub
           command: docker login -u abbuilder -p "$DOCKER_PASSWORD"
       - run:
-          name: tag image
+          name: tag vrf image
+          command: docker tag appliedblockchain/algorand-randomness-beacon-vrf:latest appliedblockchain/algorand-randomness-beacon-vrf:${CIRCLE_BRANCH}-${CIRCLE_SHA1}
+      - run:
+          name: tag app image
           command: docker tag appliedblockchain/algorand-randomness-beacon-app:latest appliedblockchain/algorand-randomness-beacon-app:${CIRCLE_BRANCH}-${CIRCLE_SHA1}
       - run:
-          name: Push tagged image to Dockerhub
+          name: Push vrf tagged image to Dockerhub
+          command: docker push appliedblockchain/algorand-randomness-beacon-vrf:${CIRCLE_BRANCH}-${CIRCLE_SHA1}
+      - run:
+          name: Push app tagged image to Dockerhub
           command: docker push appliedblockchain/algorand-randomness-beacon-app:${CIRCLE_BRANCH}-${CIRCLE_SHA1}
 
   deploy-kubernetes:
     steps:
-      - attach_workspace:
-          at: /tmp/build_space/
       - run:
           name: Install AWS cli
           command: export TZ=Europe/London && sudo ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > sudo  /etc/timezone && sudo apt-get update && sudo apt-get install -y awscli
@@ -41,11 +43,25 @@ commands:
             cd stack-eks
             kubectl apply -f app.namespace.yaml
             kubectl apply -f regcred.yaml
-            kubectl apply -f regcred-blockchain.yaml
             kubectl apply -f regcred-app.yaml
       - run:
           name: Run script to apply Kubernetes secrets
           command: cd stack-eks && ./deploy-app-env-vars.sh
+      - run:
+          name: Apply vrf manifests
+          command: |
+            cd stack-eks/vrf
+            /bin/sed -i "s/appliedblockchain\/algorand-randomness-beacon-vrf:latest/appliedblockchain\/algorand-randomness-beacon-vrf:${CIRCLE_BRANCH}-${CIRCLE_SHA1}/g" $MANIFESTS_PATH/vrf.daemonset.yaml
+            kubectl apply -f $MANIFESTS_PATH/vrf.daemonset.yaml
+            kubectl apply -f vrf.service.yaml
+            kubectl -n app rollout restart daemonset/vrf
+      - run:
+          name: Apply app manifests
+          command: |
+            cd stack-eks/app
+            /bin/sed -i "s/appliedblockchain\/algorand-randomness-beacon-app:latest/appliedblockchain\/algorand-randomness-beacon-app:${CIRCLE_BRANCH}-${CIRCLE_SHA1}/g" $MANIFESTS_PATH/app.daemonset.yaml
+            kubectl apply -f $MANIFESTS_PATH/app.daemonset.yaml
+            kubectl -n app rollout restart daemonset/app
 
 jobs:
   test-vrf:
@@ -133,6 +149,7 @@ jobs:
     steps:
       - setup_remote_docker:
           docker_layer_caching: true
+          version: 20.10.2
       - build-app
 
   deploy-dev:
@@ -149,7 +166,7 @@ jobs:
               echo "export AWS_DEFAULT_REGION=${DEV_AWS_REGION}" >> ${BASH_ENV}
               echo "export AWS_EKS_NAME=${DEV_AWS_EKS_NAME}" >> ${BASH_ENV}
               echo "export ALGOD_TOKEN=${DEV_ALGOD_TOKEN}" >> ${BASH_ENV}
-              echo "export SERVICE_MNEMONIC=${DEV_STRIPE_SERVICE_MNEMONIC}" >> ${BASH_ENV}
+              echo "export SERVICE_MNEMONIC=${DEV_SERVICE_MNEMONIC}" >> ${BASH_ENV}
               echo "export APP_AWS_SECRET_ACCESS_KEY=${DEV_APP_AWS_SECRET_ACCESS_KEY}" >> ${BASH_ENV}
               echo "export VRF_ENCRYPTED_KEY=${DEV_VRF_ENCRYPTED_KEY}" >> ${BASH_ENV}
       - deploy-kubernetes
