--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,9 @@ commands:
           command: curl -LO "https://dl.k8s.io/release/v1.23.6/bin/linux/amd64/kubectl" && sudo mv kubectl /usr/local/bin/ && chmod 755 /usr/local/bin/kubectl
       - run:
           name: Get kubeconfig configuration
-          command: aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name $AWS_EKS_NAME
+          command: |
+            aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name $AWS_EKS_NAME
+            kubectl get all
       - run:
           name: Test kubectl
           command: |
